📦 NEW: Works with errors

--- a/ios/DualCameraApp/Info.plist
+++ b/ios/DualCameraApp/Info.plist
@@ -48,5 +48,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to display live video feed</string>
+
 </dict>
 </plist>
