--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,3 +38,6 @@ target 'DualCameraApp' do
     )
   end
 end
+
+pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
+
